fix: navbar collapse height

--- a/frontend/src/components/Navigation/navigation.scss
+++ b/frontend/src/components/Navigation/navigation.scss
@@ -56,6 +56,7 @@
 			padding-bottom: em(60);
 
 			@include breakpoint-max(lg) {
+				min-height: -webkit-fill-available;
 				height: calc(100vh - 88px);
 			}
 
