--- a/frontend/src/scss/layout/_container.scss
+++ b/frontend/src/scss/layout/_container.scss
@@ -24,7 +24,7 @@ $navbar-height: rem(82);
 	}
 }
 
-// on body
+// on body and html
 .full-height {
 	height: 100%;
 }
@@ -43,8 +43,7 @@ $navbar-height: rem(82);
 }
 
 .nav-is-open {
-	min-height: 100vh;
-	overflow-y: hidden;
+	overflow: hidden;
 }
 
 @mixin full-width() {
